--- a/photo/css/overrides.css
+++ b/photo/css/overrides.css
@@ -7,6 +7,15 @@ body{
 	height: 100%;
 }
 
+.no_style_button{
+	height: 100px;
+	width: 20px;
+    padding:0; 
+    margin:0;
+    border:0;
+    background-color:transparent;
+}
+
 .pointer{
 cursor: pointer;
 }
