hardcoding mastodon username

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,9 @@
         <p class="view"><a target="_blank" href="{{ site.photo_portfolio_url }}">Photography Portfolio</a></p>
         {% endif %}
 
-        {% if site.show_downloads %}
+	<p class="view"><a rel="me" href="https://mastodon.social/@polographer">Mastodon</a></p>
+
+	{% if site.show_downloads %}
         <ul class="downloads">
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
           <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
